cluster/apps/kube-system/teleport/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: teleport
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: teleport
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teleport
    spec:
      containers:
        - name: teleport-auth
          image: quay.io/gravitational/teleport:10.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3023
              name: ssh-proxy
            - containerPort: 3025
              name: ssh-auth
            - containerPort: 3080
              name: https-ui
          volumeMounts:
            - mountPath: /etc/teleport
              name: teleport-config
            - mountPath: /var/lib/teleport
              name: teleport-data
      volumes:
        - name: certificate
          secret:
            secretName: teleport-tls
        - name: teleport-data
          persistentVolumeClaim:
            claimName: teleport-data
        - name: teleport-config
          configMap:
            name: teleport-config
