cluster/apps/kube-system/teleport/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: teleport
  namespace: kube-system
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.178.73"
  selector:
    app.kubernetes.io/name: teleport
  ports:
    - port: 3023
      targetPort: ssh-proxy
      name: ssh-proxy
    - port: 3025
      targetPort: ssh-auth
      name: ssh-auth
    - port: 3080
      targetPort: https-ui
      name: ssh-auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: teleport
    hajimari.io/enable: "true"
    hajimari.io/icon: web
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: teleport
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
    - host: teleport.broetje.online
      http:
        paths:
          - backend:
              service:
                name: teleport
                port:
                  number: 3080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - teleport.broetje.online
      secretName: teleport-tls
